--- a/content/.TEMPLATE.md
+++ b/content/.TEMPLATE.md
@@ -3,7 +3,7 @@ layout: adr
 adr: 0 # replace this number for the PR or ISSUE number
 title: Title of the ADR
 date: 2020-02-20
-status: Idea
+status: Idea, Draft # pick one of these
 type: Standards Track | Meta | RFC # pick one of these
 spdx-license: CC0-1.0
 authors:
