--- a/content/ADR-144.md
+++ b/content/ADR-144.md
@@ -28,7 +28,7 @@ Discuss and go into detail about the subject in question. Make sure you cover:
 - Vocabulary and key terms
 -->
 
-Realms ([ADR-110](https://adr.decentraland.org/adr/ADR-110)) are the configurations that define what and how is executed and rendered in a Decentraland Explorer [ADR-102](https://adr.decentraland.org/adr/ADR-102). If we reason by analogy and consider an Explorer like a Web Browser, and the Scenes like WebSites. Then the Realm is the URL of that site.
+Realms ([ADR-110](https://adr.decentraland.org/adr/ADR-110)) are the configurations that define what and how is executed and rendered in a Decentraland Explorer ([ADR-102](https://adr.decentraland.org/adr/ADR-102)). If we reason by analogy and consider an Explorer like a Web Browser, and the Scenes like WebSites. Then the Realm is the URL of that site.
 
 ## Specification
 
