--- a/content/ADR-144.md
+++ b/content/ADR-144.md
@@ -36,7 +36,7 @@ Realms ([ADR-110](https://adr.decentraland.org/adr/ADR-110)) are the configurati
 The technical specification should describe the syntax and semantics of any new feature.
 -->
 
-Realm are represented as strings. Those strings need to be resolved to a `/about` endpoint to fetch the configuration.
+Realms are represented as strings. Those strings need to be resolved to an `/about` endpoint to fetch the configuration.
 
 
 The mechanism to resolve that endpoint is:
