--- a/content/ADR-144.md
+++ b/content/ADR-144.md
@@ -36,15 +36,15 @@ Realms ([ADR-110](https://adr.decentraland.org/adr/ADR-110)) are the configurati
 The technical specification should describe the syntax and semantics of any new feature.
 -->
 
-Realms are represented as strings. Those strings need to be resolved to an `/about` endpoint to fetch the configuration.
-
+Realms are represented as strings. Those strings need to be resolved to a base URL of a valid realm, which then will be used to calculate `baseUrl+'/about'` to comply with the realm specification.
 
 The mechanism to resolve that endpoint is:
-1. If the string is an URL, then it uses the URL
-2. If the string equals to the name of a DAO catalyst, then it picks the URL of the Catalyst like `https://peer.decentraland.org/about`
-3. If the string is an ENS, then it resolves using ENS `dcl.realm` TXT values
-   1. If no values are defined for the ENS-DNS and it is a `.dcl.eth` subdomain, then it falls back to the Worlds resolver
-4. If this point is reached, then the realm is invalid.
+1. If the string is an URL, then it use the URL
+1. If the string is an ENS, then 
+   1. If there is a `dcl.realm` TXT record in the ENS, return that value
+   1. Otherwise, if it is a `.dcl.eth` subdomain, then it falls back to the Worlds resolver
+1. If the string equals to the name of a DAO catalyst, then it picks the URL of the Catalyst like `https://peer.decentraland.org` using the DAO catalyst resolver.
+1. If this point is reached, then the realm is invalid.
 
 ### ENS resolver
 
@@ -53,6 +53,15 @@ NAME and ENS holders can decide where their worlds are hosted. For that purpose,
 ### Worlds resolver
 
 Worlds is a configuration of services that enable deploying Decentraland scenes using NAME, as described in [ADR-111](/adr/ADR-111). To resolve Worlds, an URL in the shape of `https://worlds-content-server.decentraland.org/world/<NAME>.dcl.eth` is used, the `/about` response is compliant with the [Realm specification (ADR-110)](https://adr.decentraland.org/adr/ADR-110)
+
+### DAO catalyst resolver
+
+The DAO catalysts are not registered using their friendly name in the [DAO Catalyst Registry](https://etherscan.io/address/0x4a2f10076101650f40342885b99b6b101d83c486) contract, the baseUrl is used instead. To resolve their names, the following algorithm is RECOMMENDED:
+1. First the contract needs to be queried to get the list
+1. For each catalyst baseUrl, a request needs to be made to their `/about` endpoint
+   1. And finally select the matching name
+1. If no matching name is selected then return null
+
 
 ## RFC 2119 and RFC 8174
 
