--- a/content/ADR-144.md
+++ b/content/ADR-144.md
@@ -52,7 +52,7 @@ NAME and ENS holders can decide where their worlds are hosted. For that purpose,
 
 ### Worlds resolver
 
-Worlds is a configuration of services that enable deploying Decentraland scenes using NAME, as described in [ADR-111](/adr/ADR-111). To resolve Worlds, an URL in the shape of `https://worlds-content-server.decentraland.org/world/<NAME>.dcl.eth` is used, the `/about` response is compliant with the [Realm specification (ADR-110)](https://adr.decentraland.org/adr/ADR-110)
+Worlds is a configuration of services that enable deploying Decentraland scenes using a NAME, as described in [ADR-111](/adr/ADR-111). To resolve Worlds, an URL in the shape of `https://worlds-content-server.decentraland.org/world/<NAME>.dcl.eth` is used, the `/about` response is compliant with the [Realm specification (ADR-110)](https://adr.decentraland.org/adr/ADR-110)
 
 ### DAO catalyst resolver
 
