ADR-148: Synchronization of CRDT messages between scenes and Renderer (#148)

--- a/content/.TEMPLATE.md
+++ b/content/.TEMPLATE.md
@@ -1,14 +1,15 @@
 ---
 layout: adr
-adr: 0
+adr: 0 # replace this number for the PR or ISSUE number
 title: Title of the ADR
 date: 2020-02-20
-status: Idea
-type: Standards Track | Meta | RFC
+status: Idea, Draft # pick one of these
+type: Standards Track | Meta | RFC # pick one of these
 spdx-license: CC0-1.0
-slug: /adr/TEMPLATE
 authors:
-  - menduz
+  - menduz # this is your github username
+# remove the following line! it exists to render the template nicely
+slug: /adr/TEMPLATE
 ---
 
 ## Abstract
