--- a/content/ADR-151.md
+++ b/content/ADR-151.md
@@ -16,7 +16,7 @@ This document describes the requirements to render the UI entities for the Decen
 
 ## Specification
 
-The UI entities are derived from a synthetic tree of entities defined by the UiTransformComponent ([ADR-124](/adr/ADR-124)). That entity should be rendered from the root to the leafs recursively using a pre-order sequencing.
+The UI entities are derived from a synthetic tree of entities defined by the UiTransformComponent ([ADR-124](/adr/ADR-124)). That tree should be rendered from the root to the leafs recursively using a pre-order sequencing.
 
 That means the children will overwrite the pixels of the parent. This is a common practice, HTML, ReactNative and Unity's UiToolkit behave this way out of the box.
 
