--- a/content/ADR-153.md
+++ b/content/ADR-153.md
@@ -18,7 +18,7 @@ This document describes the semantics of changing parenting of entities and what
 
 - When a `Transform` component doesn't exist in an entity, it is assumed that the entity has a `scale={1,1,1}`
 - Thus, it is safe to assume that a missing `Transform` component has the same rendering semantics than an entity with a `Transform.Identity`
-- And since entities are defined by the set of components and don't exist by themselves. It is safe to assume that all entities have an `Transform.Identity` by default.
+- And since entities are defined by the set of components and don't exist by themselves, it is safe to assume that all entities have a `Transform.Identity` by default.
 - Thus we can deduct that parenting an entity A with a parent B (which doesn't exist, because it doesn't have any components) should have the same semantics as parenting an entity A with a valid parent entity B with a `Transform.Identity` component
 
 #### When an entity A is added to an entity B but the engine do not know about entity B
