--- a/content/ADR-153.md
+++ b/content/ADR-153.md
@@ -21,7 +21,7 @@ This document describes the semantics of changing parenting of entities and what
 - And since entities are defined by the set of components and don't exist by themselves, it is safe to assume that all entities have a `Transform.Identity` by default.
 - Thus we can deduce that parenting an entity A with a parent B (which doesn't exist, because it doesn't have any components) should have the same semantics as parenting an entity A with a valid parent entity B with a `Transform.Identity` component.
 
-#### When an entity A is added to an entity B but the engine do not know about entity B
+#### When an entity A is added to an entity B but the engine does not know about entity B
 
 - The engine MUST assume that the entity B is valid, even though "it doesn't exist" because no component is registered to it.
 - The assumption for the Transform component of the entity B is that the entity have a Transform.Identity component
