--- a/content/ADR-153.md
+++ b/content/ADR-153.md
@@ -26,7 +26,7 @@ This document describes the semantics of changing parenting of entities and what
 - The engine MUST assume that the entity B is valid, even though "it doesn't exist" because no component is registered to it.
 - The assumption for the Transform component of the entity B is that the entity have a Transform.Identity component
 
-#### When the engine is made aware about the real Transform component of entity B
+#### When the engine is made aware of the real Transform component of entity B
 
 - It MUST change the default Transform.Identity and the change of the matrix calculation of all its children should take it into account.
 
