--- a/content/ADR-153.md
+++ b/content/ADR-153.md
@@ -28,7 +28,7 @@ This document describes the semantics of changing parenting of entities and what
 
 #### When the engine is made aware of the real Transform component of entity B
 
-- It MUST change the default Transform.Identity and the change of the matrix calculation of all its children should take it into account.
+- It MUST change the default `Transform.Identity` and the change of the matrix calculation of all its children should take it into account.
 
 #### Complex scenario
 
