--- a/content/ADR-153.md
+++ b/content/ADR-153.md
@@ -24,7 +24,7 @@ This document describes the semantics of changing parenting of entities and what
 #### When an entity A is added to an entity B but the engine does not know about entity B
 
 - The engine MUST assume that the entity B is valid, even though "it doesn't exist" because no component is registered to it.
-- The assumption for the Transform component of the entity B is that the entity have a Transform.Identity component
+- The assumption for the `Transform` component of the entity B is that the entity have a `Transform.Identity` component.
 
 #### When the engine is made aware of the real Transform component of entity B
 
