rewritten by chat-gpt
Signed-off-by: menduz <github@menduz.com>

--- a/content/ADR-151.md
+++ b/content/ADR-151.md
@@ -12,15 +12,13 @@ authors:
 
 ## Abstract
 
-This document describes the requirements to render the UI entities for the Decentraland Protocol. TL;DR; Pre-order using the entity tree defined by the UiTransform ([ADR-124](/adr/ADR-124)).
+This document describes a UI system in which entities are derived from a synthetic tree and rendered using pre-order sequencing. The rendering process allows for the configuration of stencils to control which parts of a parent entity are visible. The default behavior is to render children in full, even if they extend beyond the borders of the parent. This system is similar to how HTML, ReactNative, and Unity's UiToolkit handle rendering.
 
 ## Specification
 
-The UI entities are derived from a synthetic tree of entities defined by the UiTransformComponent ([ADR-124](/adr/ADR-124)). That tree should be rendered from the root to the leafs recursively using a pre-order sequencing.
+The UI entities in this system are derived from a synthetic tree of entities defined by the UiTransformComponent ([ADR-124](/adr/ADR-124)). This tree must be rendered using a pre-order sequencing, with children overwriting the pixels of the parent in the rendering process. This behavior is similar to how HTML, ReactNative, and Unity's UiToolkit handle rendering by default.
 
-That means the children will overwrite the pixels of the parent. This is a common practice, HTML, ReactNative and Unity's UiToolkit behave this way out of the box.
-
-It MUST be possible to configure entities to act as stencil to only render what it is between the borders of the parent entity. The default behavior MUST be that children will be rendered in ful (without stencil) even though are bigger than the borders of the parent. The stencil is an analogous to the `overflow: hidden` CSS property.
+It is REQUIRED to be able to configure entities to act as stencils, so that only the content within the borders of the parent entity is rendered. By default, children must be rendered in full (without stencils), even if they extend beyond the borders of the parent. This stencil behavior is analogous to the `overflow: hidden` CSS property.
 
 > TODO: create ADR for UiOverflowMode component
 
