--- a/content/ADR-125.md
+++ b/content/ADR-125.md
@@ -24,8 +24,10 @@ The technical specification should describe the syntax and semantics of any new 
 -->
 
 ### `PointerEvents` component
-We are going to reuse the existing PointerHoverFeedback component, but with another name (HoverFeedback is not the most accurate name IMO).
-We are going to use this component to tell the renderer which entities are going to be clickable/hover, etc.
+
+We are going to reuse the existing PointerHoverFeedback component, the name will be changed to PointerEvents to reflect its ultimate purpose.
+
+The `PointerEvents` component is used to signal the renderer about which entities are eligible for pointer interactions, it is RECOMMENDED to use this component as filter for raycasts.
 
 ```protobuf
 enum PointerEventType {
@@ -53,9 +55,11 @@ message PBPointerEvents {
 }
 ```
 ### `PointerEventsResult` component
-We are going to use the same component that we are currently using for 3D objects, so we can reuse the same logic and we dont to manage multiple messages that does the same.
 
-This pointerEventResult message has a lot of props that we are not going to use inside the Hit prop, but since they can all be undefined, we can only send the entity and it'll be ok.
+The same component that is currently used for 3D objects will be used to process the UI pointer events, this will leverage the existing codebase while reducing moving parts and cognitive load on the users of the SDK.
+
+Notice that this component has many properties that are not useful for the 2D UI like "analog". The behavior for those fields in the UI is yet to be defined.
+
 ```protobuf
 message PBPointerEventsResult {
   // a list of the last N pointer commands (from the engine)
@@ -73,7 +77,7 @@ message PBPointerEventsResult {
 ```
 ### `UiText` component
 
-To all extents, it is a reusable label for the UI.
+A "rendering component", signals the engine to render a 2D text in the specified entity. The size and position of the label will be defined by the [ADR-124](https://adr.decentraland.org/adr/ADR-124)
 
 ```protobuf
 message PBUiText {
@@ -87,7 +91,7 @@ message PBUiText {
 
 ### `UiBackground` component
 
-Sets the background of a UI element. By default it has a transparent color. It can specify a 9-slices texture. When a texture and a color are specified, the color multiplies the texture to enable easy customization of UI elements in different states i.e. active, focused, highlighted.
+This component sets the background of a UI element. When a texture and a color are specified, the color multiplies the texture to enable easy customization of UI elements in different states i.e. active, focused, highlighted. A 9-slices background mode can be specified, affecting the specified texture.
 
 ```protobuf
 message PBUiBackground {
@@ -95,7 +99,7 @@ message PBUiBackground {
   optional decentraland.common.Color4 color = 1;
 
   // texture for the background
-  optional Texture texture = 2;
+  optional decentraland.common.TextureUnion texture = 2;
 
   // texture mode
   BackgroundTextureMode texture_mode = 3;
@@ -129,11 +133,11 @@ enum BackgroundTextureMode {
 
 ### `UiButton` component
 
-UiButton can be implemented with a `UiText+UiTransform+UiBackground` to start.
+UiButton can be implemented with a `UiText+UiTransform+UiBackground`.
 
 ### `UiInput`
 
-UiInput adds an editable behavior to the UiEntity. By default it can render a placeholder label.
+UiInput adds an editable behavior to the UiEntity. By default it can render a placeholder label. The size and position of the `UiInput` will be defined by the [ADR-124](https://adr.decentraland.org/adr/ADR-124)
 
 ```protobuf
 message UiInput {
