--- a/content/ADR-125.md
+++ b/content/ADR-125.md
@@ -105,7 +105,7 @@ message PBUiBackground {
   BackgroundTextureMode texture_mode = 3;
 
   // texture_slices, represents the top | right | bottom | left sizes of the
-  // slices for the borders. values are percentages of the texture.
+  // slices for the borders. Values are percentages of the texture.
   // default=(1/3,1/3,1/3,1/3)
   optional Rect texture_slices = 4;
 
